# aerial-autonomy-stack

./: .gitattributes  .gitignore  README.md
.github/workflows/: aas-amd64-build-and-test.yml  aas-amd64-main.yml  aas-gym-pip-install.yml  aircraft-amd64-build.yml  aircraft-arm64-build.yml  cleanup-all-packages.yml  cleanup-old-packages.yml  cleanup-packages.yml  ground-amd64-build.yml  simulation-amd64-build.yml
.history/docs/: spray_dqn_apple_orchard_minimal_plan_20260424102511.md
aas-gym/: pyproject.toml
aas-gym/src/aas_gym/: aas_env.py
docs/: spray_dqn_apple_orchard_minimal_plan.md
experiments/spray_dqn/: ICTAI_LATEX_VIEWING.md  ICTAI_SUBMISSION_NOTES.md  PAPER_EXPERIMENT_SECTION.md  PAPER_REPORT_DRAFT.md  PAPER_REQUIRED_EXPERIMENTS.md  README.md  SYSTEM_STATUS.md  __init__.py  compare_algorithms.py  compare_rl_results.py  dqn_paper_revised.tex  evaluate_dqn.py  generate_mission_from_result.py  generate_spray_mission.py  ictai2026_initial_draft.tex  ictai2026_refs.bib  learning_curve_utils.py  orchard_dqn_env.py  orchard_rl_envs.py  orchard_world.py  plot_action_matrix.py  plot_coverage.py  plot_enhanced_result.py  plot_learning_curves.py  prepare_gazebo_replay.py  run_main5_curves.sh  run_paper_experiments.py  run_pipeline.py  run_top5_multiseed.py  train_dqn.py  train_dqn_variants.py  train_drqn.py  train_sb3_algorithms.py
ground/: ground.yml.erb
scripts/: deploy_run.sh  sim_build.sh  sim_run.sh
simulation/: simulation.yml.erb
supplementary/: BOM.md  RATIONALE.md  SETUP_AVIONICS.md  TODOs.md
tests/: performance.sh
(+26 files in other folders)
